--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,13 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "@typescript-eslint/naming-convention": "warn",
-        "@typescript-eslint/semi": "warn",
-        "curly": "warn",
-        "eqeqeq": "warn",
-        "no-throw-literal": "warn",
-        "semi": "off"
-    },
-    "ignorePatterns": [
-        "out",
-        "dist",
-        "**/*.d.ts"
-    ]
+  "extends": "@antfu",
+  "rules": {
+    "vue/one-component-per-file": "off",
+    "no-console": "off",
+    "no-prototype-builtins": "off",
+    "no-eval": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-this-alias": "off",
+    "no-cond-assign": "off",
+    "no-tabs": "off"
+  }
 }
