--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "publisher": "tounocss",
+  "publisher": "simonhe",
   "name": "to-unocss",
   "displayName": "To Unocss",
   "version": "0.0.3",
