--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,4 @@
+.github/**
 .vscode/**
 .vscode-test/**
-src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+scripts/**
