--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "main": "./out/extension.js",
   "icon": "icon.png",
   "engines": {
-    "vscode": "^1.1.28",
-    "node": "14.18.1"
+    "node": "14.18.1",
+    "vscode": "^1.73.0"
   },
   "activationEvents": [
     "onLanguage:html",
@@ -99,11 +99,11 @@
   "scripts": {
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "test": "yarn compile && node ./node_modules/vscode/bin/test",
-    "build": "vsce package --no-yarn",
+    "test": "npm compile && node ./node_modules/vscode/bin/test",
+    "build": "vsce package",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache",
     "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache --fix",
-    "release": "yarn build && npx bumpp --commit --tag --push --all && vsce publish --no-dependencies --no-yarn"
+    "release": "npm build && npx bumpp --commit --tag --push --all && vsce publish --no-dependencies"
   },
   "dependencies": {
     "transform-to-unocss": "^0.0.46",
@@ -117,6 +117,7 @@
     "@types/vscode": "^1.1.28",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
+    "@vscode/vsce": "^2.18.0",
     "bumpp": "^9.0.0",
     "del": "^4.1.1",
     "esbuild": "^0.17.12",
@@ -128,8 +129,6 @@
     "run-sequence": "^2.2.1",
     "tslint": "^5.16.0",
     "typescript": "^4.8.4",
-    "vsce": "^2.15.0",
-    "vscode": "^1.1.28",
     "vscode-nls-dev": "^3.2.6"
   },
   "preview": true
