--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "bugs": {
     "url": "https://github.com/Simon-He95/tounocss/issues"
   },
+  "sponsor": {
+    "url": "https://github.com/Simon-He95/sponsor"
+  },
   "keywords": [
     "unocss",
     "css",
