chore: update dependency

--- a/package.json
+++ b/package.json
@@ -82,10 +82,8 @@
     "publish": "vsce publish --no-dependencies",
     "release": "bumpp && pnpm run publish"
   },
-  "dependencies": {
-    "@vscode-use/utils": "^0.0.20"
-  },
   "devDependencies": {
+    "@vscode-use/utils": "^0.0.20",
     "@antfu/eslint-config": "^0.38.4",
     "@types/node": "^18.15.11",
     "@types/vscode": "^1.77.0",
